tests/ui/graph_macro_duplicate_node_expr.stderr
warning: unused import: `safegraph::graph::GraphOperation`
 --> tests/ui/graph_macro_duplicate_node_expr.rs:1:5
  |
1 | use safegraph::graph::GraphOperation;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0599]: no method named `stabilize` found for struct `LinkedAdjEdgeGraph` in the current scope
   --> tests/ui/graph_macro_duplicate_node_expr.rs:4:74
    |
  4 |     let mut g = safegraph::VecGraph::<(i64, u32), (i64, u32)>::default().stabilize();
    |                                                                          ^^^^^^^^^ method not found in `LinkedAdjEdgeGraph<Vec<((i64, u32), NodeRepr<u32>)>, Vec<(..., ...)>>`
    |
   ::: /home/yasuo/ghq/github.com/yasuo-ozu/safegraph/src/graph.rs:288:8
    |
288 |     fn stabilize<'r, N, E>(self) -> StabilizedGraph<'r, Self, N, E>
    |        --------- the method is available for `LinkedAdjEdgeGraph<Vec<((i64, u32), NodeRepr<u32>)>, Vec<((i64, u32), EdgeRepr<u32, u32>)>>` here
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `Graph` which provides `stabilize` is implemented but not in scope; perhaps you want to import it
    |
  1 + use safegraph::Graph;
    |

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0599`.
